<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="64dp"
            android:layout_height="6dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/white" />
    </FrameLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.OnlyTopCorners.32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nsvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:padding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/storyImageContainer"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        app:cardCornerRadius="16dp"
                        app:layout_constraintDimensionRatio="H, 10:11"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/storyImage"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/user_image"
                            android:scaleType="centerCrop"
                            android:src="@color/grey" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/takePhoto"
                        style="@android:style/Widget.Holo.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:backgroundTint="@android:color/transparent"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/take_photo_from_camera"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/tab_indicator_text"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_baseline_photo_camera_24"
                        app:iconSize="24dp"
                        app:iconTint="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/storyImageContainer" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/gallery"
                        style="@android:style/Widget.Holo.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@android:color/transparent"
                        android:insetTop="0dp"
                        android:insetBottom="0dp"
                        android:text="@string/take_photo_from_gallery"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/tab_indicator_text"
                        android:textSize="14sp"
                        app:icon="@drawable/ic_baseline_photo_library"
                        app:iconSize="24dp"
                        app:iconTint="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/takePhoto" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/showLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:text="@string/show_location"
                        android:textColor="@android:color/tab_indicator_text"
                        android:thumb="@drawable/stapp_theme_thumb"
                        app:layout_constraintTop_toBottomOf="@id/gallery"
                        app:switchPadding="24dp"
                        app:track="@drawable/stapp_theme_track"
                        app:useMaterialThemeColors="false" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/storyDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="start"
                        android:hint="@string/enter_description"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintTextColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/showLocation">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:inputType="textMultiLine"
                            android:textCursorDrawable="@null"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnUpload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:insetTop="2dp"
                        android:insetBottom="2dp"
                        android:text="@string/upload"
                        app:backgroundTint="@color/black"
                        app:cornerRadius="8dp"
                        app:layout_constraintTop_toBottomOf="@id/storyDescription" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>